--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,9 +3,14 @@
 @tailwind utilities;
 
 .button {
-    @apply inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2;
+	@apply inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2;
 }
 
 .btn-primary {
-    @apply bg-capi hover:bg-opacity-80 focus:ring-capi ring-offset-gray-100;
+	@apply bg-capi hover:bg-opacity-80 focus:ring-capi ring-offset-gray-100;
+}
+
+.bg-scrap {
+	background-color: #f3f4f6;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%231eb858' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
