--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,10 @@
 	@apply bg-capi ring-offset-gray-100 hover:bg-opacity-80 focus:ring-capi;
 }
 
+.btn-dark {
+	@apply bg-gray-800 ring-offset-gray-100 hover:bg-opacity-80 focus:ring-gray-800;
+}
+
 .bg-scrap {
 	background-color: #f3f4f6;
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%231eb858' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
