--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	html {
+		font-family: 'Ubuntu', sans-serif;
+	}
+}
 
 .button {
 	@apply inline-flex items-center rounded-md border border-transparent px-4 py-2 text-base font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2;
