--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,12 +10,12 @@
 	}
 }
 
-.button {
+.btn {
 	@apply inline-flex items-center rounded-md border border-transparent px-4 py-2 text-base font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2;
 }
 
-.sidebar-button {
-	@apply flex w-full items-center gap-4 whitespace-nowrap rounded-md px-3 py-4 text-2xl font-medium text-gray-300 hover:bg-gray-600 hover:text-white lg:justify-start lg:gap-2 lg:py-2 lg:text-lg;
+.btn-disabled {
+	@apply pointer-events-none opacity-50 select-none;
 }
 
 .btn-primary {
@@ -24,6 +24,10 @@
 
 .btn-dark {
 	@apply bg-gray-800 ring-offset-gray-100 hover:bg-opacity-80 focus:ring-gray-800;
+}
+
+.sidebar-button {
+	@apply flex w-full items-center gap-4 whitespace-nowrap rounded-md px-3 py-4 text-2xl font-medium text-gray-300 hover:bg-gray-600 hover:text-white lg:justify-start lg:gap-2 lg:py-2 lg:text-lg;
 }
 
 .bg-scrap {
