feat: Shipping Request View Done, yet to be functional

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,7 @@
 }
 
 .btn-disabled {
-	@apply pointer-events-none opacity-50 select-none;
+	@apply pointer-events-none select-none opacity-50;
 }
 
 .btn-primary {
